[project]
name = "latex-mcp"
version = "1.0.0"
description = "MCP server that renders LaTeX math expressions into PNG images for sharing in iMessage and other apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "matplotlib>=3.9.0",
    "pydantic>=2.11.0",
]

[project.scripts]
latex-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
